[package]
name = "olean-rs"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2"
num-traits = "0.2.6"
num-derive = "0.2.3"
byteorder = "1.2.7"
getopts = "0.2"
walkdir = "2"
nibble_vec = "~0.0.3"
endian-type = "0.1.2"
unicode_reader = "0.1.1"
take_mut = "0.2.2"
serde = "1.0.90"
serde_yaml = "0.8.8"
serde_derive = "1.0.90"
thunk = "0.3.0"
# serde_yaml = "0.8.7"
# serde_derive = "0.8.7"
# serde = "1.0.90"
# yaml-rust = "0.4.3"
